--- a/style/main.css
+++ b/style/main.css
@@ -1,6 +1,10 @@
 body{
+    height: 100vh;
+    width: 100%;
+    background-image: url(universo.jpg);
     margin: 0;
-    font-family:'Times New Roman', Times, serif;
+    background-size: cover;
+    background-repeat: repeat-y;
 }
 nav{
     display: flex;
